<resources>
    <string name="app_name">Pretty Light</string>
    <string name="light_on">On</string>
    <string name="light_off">Off</string>

    <string name="error">Error</string>
    <string name="error_info">This device has no flash light!</string>
    <string name="ok">OK</string>



    <string name="banner_id_2">ca-app-pub-6905524421989892/8827165963</string>
    <string name="banner_id_1">ca-app-pub-6905524421989892/5805137560</string>
    <string name="banner_id_3">ca-app-pub-6905524421989892/1303899167</string>



    <string name="stroboscopeOff">Stroboscope Off</string>
    <string name="stroboscopeOn">Stroboscope On</string>
    <string name="rate">Take a moment to rate this App in Google Play!</string>
    <string name="purchase">purchase this App and enjoy free Ads APP</string>
    <string name="about">Orange Technik, Take Your Life to Feature</string>
    <string name="magic_skin">Tired of the skin? Replace it now!</string>


    <string name="rate_us">Rate us in the Play Store</string>
    <string name="purchase_us">Purchase this App to remove Ads</string>
    <string name="setting">Setting</string>


    <string name="website">More simple apps and source code at:\nhttp://simplemobiletools.com</string>
    <string name="email_label">Send your feedback or suggestions to:</string>
    <string name="email" translatable="false"><u>orange.technik@gmail.com</u></string>
    <string name="invite_friends_underlined"><u>Invite friends</u></string>
    <string name="share_text">Hey, come check out %1$s at %2$s</string>
    <string name="invite_via">Invite via</string>

    <string name="rate_us_underlined"><u>Rate me in the Play Store</u></string>
    <string name="copyright">V3.0\nCopyright © Orange Technik 2017</string>
    <string name="purchase_us_underlined"><u>purchase us in the Play Store</u></string>
    <string name="welcome">Pretty Light, Pretty Bright</string>
    <string name="developer">Orange Technik</string>
    <string name="word">Technology, make your life better</string>
    <string name="app_introduction">Most beautiful, Most simple\nBring the pretty light for your life\nMake your life better</string>
    <string name="age">Version</string>
    <string name="secret_value">V3.0</string>
    <string name="Fans"></string>
    <string name="sex">Update</string>
    <string name="sex_value">Latest</string>
    <string name="fans_value"></string>
    <string name="xxx"></string>
</resources>
