<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:id="@+id/about_scrollview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/about_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin">

       <!-- <TextView
            android:id="@+id/about_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/website"/>-->



        <TextView
            android:id="@+id/about_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/email_label"/>

        <TextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_email_label"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:text="@string/email"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/about_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_email"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/invite_friends_underlined"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/about_rate_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_invite"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/rate_us_underlined"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/about_pauchase_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_rate_us"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/purchase_us_underlined"
            android:textColor="@color/colorAccent"/>



        <TextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/copyright"/>

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
