<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.FitWindowsFrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_collapseMode="pin"
    app:layout_collapseParallaxMultiplier="0.7">

    <ImageView
        android:id="@+id/image_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/colorAccent"
        android:scaleType="fitXY"/>



    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_collapseMode="pin"
        app:layout_collapseParallaxMultiplier="0.7"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/developer"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="start"
                    android:text="@string/word"
                    android:textColor="#ffffff"
                    android:textSize="13sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/app_introduction"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/three_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_value"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/three_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/three_one"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Fans"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fans_value"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/three_two"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_value"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/header_layout_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingBottom="3dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="3dp"
                android:text="@string/xxx"
                android:textColor="#ffffff"
                android:textSize="12sp"/>
        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.FitWindowsFrameLayout>



